css/styles.css
/*     
    width:100%;
    height: 300px;
    border: solid;
    border-width: 50px;
    border-top: 0px;
    border-width: 0px, 10px, 16px, 20px;
    padding: 20px;
    margin:10 px; //buffer zone
    position: relative, absolute, static, fixed
    top:
    right:
    font-size: // 100% = 16px = 1em


    About me page
}


*/

/******************* Element Selector ******************/

body{
    background-color: #F8F4EC;
}

h1{
    display: inline;
}

h3{
    text-align: center;
}

h4{
    margin: 0;
}

a{
    text-decoration: none;
    color: black;
}

a:hover {
    color: black;
}

a:active{
    color:#A19882;
}

img{
    max-width: 100%;
}

table{
    table-layout: fixed;
    width: 100%;
    border-collapse: collapse;
    
}

.temp {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px;
}

.row>*{
    padding: 0;
}

/********************* Heading ***********************/

.heading-col{
    /* position: fixed; */
    display:flex;
    justify-content: center;
    align-items: center;
    /* width: 50%; */
    /* padding-left: 16%;
    padding-right: 14%;
    padding-top: 22%; */
    /* padding-bottom: 25%; */
    min-height: 80vh;
}

.heading-intro{
    min-height: 80vh;
}

.photo1{
    padding-right: 0px;
}

/******************* About Me **********************/

.container-aboutMe{
    background: #C2B8A3;
    width: 100%;
    height: 80vh;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}


.aboutMe{
    background: #F8F4EC;
    border-radius: 1%;
    width: 80%;
    height: auto;
    margin: 10px;
    padding: 8.5%;
}

/******************* Projects div *********************/
.projects{
    padding: 8vh 0 0 0;
}

.projects h4{
    text-align: center;
}

.projects-row{
    margin-left: 8vh;
    margin-right: 8vh;    
}

.projects-container{
    /* background: #F8F4EC; */
    padding: 12px;
    min-height: 80vh;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.projects-info{
    background: #E6DDC6;
    border-radius: 1%;
    height: auto;
    margin: 8vh 0;
    padding: 8.5% 8.5% 1% 8.5%;
}

.projects-0{
    background: #F8F4EC;
}

.projects-1{
    background: #C2B8A3;
}

.projects-p{
    padding: 14px 0;
}


/******************* Technical Skills ********************/
.skills-container{
    display: "flex";
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: "center";
    align-items: "center";
}

.skills{
    height: auto;
    /* margin: 10px; */
    padding-top: 5%;
    /* padding: 8.5%; */
}


/******************* Class Selector ********************/


.experience{
    position: relative;
    top: 1%;
}



.experience, .skills, .education, .contactMe{
    padding-left: 10%;
    padding-right: 10%;
}

